--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 find_package(Threads REQUIRED)
 
+set_target_properties(nathans_simplex_solver PROPERTIES LINK_FLAGS "${CMAKE_THREAD_LIBS_INIT}")
+
 add_subdirectory(pybind11)
 pybind11_add_module(nathans_Simplex_solver_py NathansSimplexSolver.cpp)
-
-set_target_properties(parallelization_benchmarks PROPERTIES LINK_FLAGS "${CMAKE_THREAD_LIBS_INIT}")
